--- a/dashboard/src/main/resources/templates/dashboard.mustache
+++ b/dashboard/src/main/resources/templates/dashboard.mustache
@@ -4,46 +4,90 @@
   <link rel="stylesheet" type="text/css" href="/assets/css/semantic.css"/>
 </head>
 <body>
- <div class="ui raised segment">
-   <h3 class="ui inverted basic block header">Fitbit Dashboard</h3>
+
+ <div class="ui two column grid basic segment">
+    <div class="row">
+       <div class="seven wide column">
+           <span class="ui header inverted blue">Fitbit Dashboard</span>
+       </div>
+       <div class="left aligned two wide column">
+           <img src="/assets/images/wireframe/fitbit-logo.jpg" class="ui image">
+       </div>
+       <div class="right aligned three wide column">
+            <span class="ui header inverted blue">Showing data for:</span>
+       </div>
+       <div class="three wide column">
+           <form id="dateSelectionForm" action="/dashboard" method="get">
+            <div class="ui form">
+               <div class="ui inline fields">
+                   <div class="field">
+                       <select id="forDate" name="forDate">
+                           <option value="">Yesterday</option>
+                           {{#dateList}}
+                               {{#dates}}
+                               <option value="{{date}}">{{date}}</option>
+                               {{/dates}}
+                           {{/dateList}}
+                       </select>
+                   </div>
+                   <div class="field">
+                        <input class="ui inverted blue button" type="submit" value="GO">
+                   </div>
+               </div>
+              </div>
+           </form>
+       </div>
+   </div>
+</div>
+<div class="ui divider"></div>
+<div class="ui two column grid basic segment">
+ <div class="center aligned column">
+    <div class="ui horizontal statistics">
+        <div class="statistic">
+            <div class="value">
+                <i class="trophy icon"></i>
+                {{#report}}
+                    <span id="winner-total" style="visibility: hidden">{{winnerSteps}}</span>
+                {{/report}}
+            </div>
+            <div class="label">
+                Steps
+            </div>
+        </div>
+    </div>
  </div>
-    <div class="ui two column grid basic segment">
-     <div class="center aligned column">
-        <div class="ui horizontal statistics">
-            <div class="statistic">
-                <div class="value">
-                    <i class="trophy icon"></i>
-                    {{#report}}
-                        <span id="winner-total" style="visibility: hidden">{{winnerSteps}}</span>
-                    {{/report}}
+ <div class="ui vertical divider"> Versus </div>
+ <div class="center aligned column">
+  <div class="ui horizontal statistics">
+      <div class="statistic">
+          <div class="value">
+              <i class="thumbs outline down icon"></i>
+              {{#report}}
+                    <span id="loser-total" style="visibility: hidden">{{loserSteps}}</span>
+              {{/report}}
+          </div>
+          <div class="label">
+              Steps
+          </div>
+      </div>
+  </div>
+ </div>
+</div>
+<div class="ui divider"></div>
+<div class="ui grid">
+ <div class="row">
+
+        <div class="center aligned six wide column">
+            <div id="winner-image" class="ui rotate left reveal">
+                <div class="visible content">
+                    <img src="/assets/images/wireframe/white-image.png" class="ui medium bordered circular image">
                 </div>
-                <div class="label">
-                    Steps
+                <div class="hidden content">
+                    <img src="http://www.gravatar.com/avatar/{{#report}}{{winnerGravatar}}{{/report}}?s=400" class="ui medium bordered circular image">
                 </div>
             </div>
         </div>
-     </div>
-     <div class="ui vertical divider"> Versus </div>
-     <div class="center aligned column">
-      <div class="ui horizontal statistics">
-          <div class="statistic">
-              <div class="value">
-                  <i class="thumbs outline down icon"></i>
-                  {{#report}}
-                        <span id="loser-total" style="visibility: hidden">{{loserSteps}}</span>
-                  {{/report}}
-              </div>
-              <div class="label">
-                  Steps
-              </div>
-          </div>
-      </div>
-     </div>
-    </div>
-    <div class="ui divider"></div>
-    <div class="ui grid">
-    <div class="row">
-        <div class="center aligned sixteen wide column">
+        <div class="center aligned four wide column">
             <div class="ui statistic">
                 <div class="value">
                     <span id="countdown">8</span>
@@ -53,43 +97,27 @@
                 </div>
             </div>
         </div>
-    </div>
-    </div>
-    <div class="ui divider"></div>
-    <div class="ui grid">
-     <div class="row">
-
-            <div class="center aligned eight wide column">
-                <div id="winner-image" class="ui rotate left reveal">
-                    <div class="visible content">
-                        <img src="/assets/images/wireframe/white-image.png" class="ui medium bordered circular image">
-                    </div>
-                    <div class="hidden content">
-                        <img src="http://www.gravatar.com/avatar/{{#report}}{{winnerGravatar}}{{/report}}?s=400" class="ui medium bordered circular image">
-                    </div>
-                </div>
-            </div>
-            <div class="center aligned eight wide column">
-                 <div id="loser-image" class="ui rotate right reveal">
-                     <div  class="visible content">
-                         <img src="/assets/images/wireframe/white-image.png" class="ui small bordered circular image">
-                     </div>
-                     <div class="hidden content">
-                         {{#report}}
-                         <img src="http://www.gravatar.com/avatar/{{loserGravatar}}?s=200" class="ui small bordered circular image">
-                         {{/report}}
-                     </div>
+        <div class="center aligned six wide column">
+             <div id="loser-image" class="ui rotate right reveal">
+                 <div  class="visible content">
+                     <img src="/assets/images/wireframe/white-image.png" class="ui small bordered circular image">
+                 </div>
+                 <div class="hidden content">
+                     {{#report}}
+                     <img src="http://www.gravatar.com/avatar/{{loserGravatar}}?s=200" class="ui small bordered circular image">
+                     {{/report}}
                  </div>
              </div>
+         </div>
 
-     </div>
-    </div>
-    <div class="ui divider"></div>
-    <div class="footer">
-     <p>&copy; mcveigh fitbit dashboard</p>
-    </div>
- <script src="http://code.jquery.com/jquery-1.10.2.min.js"></script>
- <script src="/assets/js/semantic.js" type="text/javascript"></script>
- <script src="/assets/js/dashboard.js" type="text/javascript"></script>
+ </div>
+</div>
+<div class="ui divider"></div>
+<div class="footer">
+ <p>&copy; mcveigh fitbit dashboard</p>
+</div>
+<script src="http://code.jquery.com/jquery-1.10.2.min.js"></script>
+<script src="/assets/js/semantic.js" type="text/javascript"></script>
+<script src="/assets/js/dashboard.js" type="text/javascript"></script>
 </body>
 </html>
