--- a/dashboard/src/main/resources/templates/error.mustache
+++ b/dashboard/src/main/resources/templates/error.mustache
@@ -4,26 +4,66 @@
     <link rel="stylesheet" type="text/css" href="/assets/css/semantic.css"/>
 </head>
 <body>
-    <div class="ui raised segment">
-        <h3 class="ui inverted basic block header">Fitbit Dashboard</h3>
-        <div class="ui grid">
-            <div class="row">
-                <div class="center aligned sixteen wide column">
-                    <div class="ui statistic">
-                        <div class="value">
-                            <span id="countdown">No data...</span>
+
+<div class="ui two column grid basic segment">
+    <div class="row">
+        <div class="seven wide column">
+            <span class="ui header inverted blue">Fitbit Dashboard</span>
+        </div>
+        <div class="left aligned two wide column">
+            <img src="/assets/images/wireframe/fitbit-logo.jpg" class="ui image">
+        </div>
+        <div class="right aligned three wide column">
+            <span class="ui header inverted blue">Showing data for:</span>
+        </div>
+        <div class="three wide column">
+            <form id="dateSelectionForm" action="/dashboard" method="get">
+                <div class="ui form">
+                    <div class="ui inline fields">
+                        <div class="field">
+                            <select id="forDate" name="forDate">
+                                <option value="">Yesterday</option>
+                                {{#dateList}}
+                                {{#dates}}
+                                <option value="{{date}}">{{date}}</option>
+                                {{/dates}}
+                                {{/dateList}}
+                            </select>
                         </div>
-                        <div id="message-label" class="label">
-                            Get Micheal to go and check it out!
+                        <div class="field">
+                            <input class="ui inverted blue button" type="submit" value="GO">
                         </div>
                     </div>
                 </div>
-            </div>
-        </div>
-        <div class="ui divider"></div>
-        <div class="footer">
-            <p>&copy; mcveigh fitbit dashboard</p>
+            </form>
         </div>
     </div>
+</div>
+
+<div class="ui divider"></div>
+
+<div class="ui grid">
+    <div class="row">
+        <div class="center aligned sixteen wide column">
+            <div class="ui statistic">
+                <div class="value">
+                    <span id="no-data-error">No data...</span>
+                </div>
+                <div id="message-label" class="label">
+                    Get Micheal to go and check it out!
+                </div>
+            </div>
+        </div>
+    </div>
+</div>
+
+<div class="ui divider"></div>
+
+<div class="footer">
+    <p>&copy; mcveigh fitbit dashboard</p>
+</div>
+<script src="http://code.jquery.com/jquery-1.10.2.min.js"></script>
+<script src="/assets/js/semantic.js" type="text/javascript"></script>
+<script src="/assets/js/dashboard.js" type="text/javascript"></script>
 </body>
 </html>
